--- a/sample/src/main/webapp/index.html
+++ b/sample/src/main/webapp/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store">
+    <meta HTTP-EQUIV="expires" CONTENT="0">
 </head>
 <body>
     查看用户详细信息<br>
